--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,13 @@
     "name": "Flashcard Extension",
     "description": "Chrome extension where users can create their own flashcards and the chrome extension will periodically prompt the user to review the concepts on the flashcard.",
     "version": "1.0",
+    "permissions": ["alarms", "storage"],
     "action": {
       "default_popup": "flashcard.html",
-      "default_icon": "hello_extensions.png"
+      "default_icon": "images/flashcard_logo.png"
+    }, 
+    "background": {
+        "service-worker": "background.js", 
+        "type": "module"
     }
   }
