update names and popup window created

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "Flashcard Extension",
     "description": "Chrome extension where users can create their own flashcards and the chrome extension will periodically prompt the user to review the concepts on the flashcard.",
     "version": "1.0",
-    "permissions": ["alarms", "storage"],
+    "permissions": ["alarms", "storage", "notifications"],
     "action": {
       "default_popup": "flashcard.html",
       "default_icon": "images/flashcard_logo.png"
